post 의 header 영역 정의

--- a/public/resources/0001250302-git.md
+++ b/public/resources/0001250302-git.md
@@ -1,3 +1,11 @@
+---
+title: "Git 명령어 모음"
+description: "Git을 효율적으로 사용하기 위한 기본 명령어 모음입니다."
+author: "nimkoes"
+date: "2025-02-22"
+tags: ["git", "명령어", "github"]
+---
+
 # Merge
 
 - 두 개의 브랜치를 하나로 합치는 작업
